--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.24.0",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
+    "netlify-cli": "^6.5.9",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
     "supports-color": "^7.1.0"
