--- a/package.json
+++ b/package.json
@@ -19,18 +19,28 @@
     "async": "^3.2.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "bootstrap": "^5.1.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "filepond": "^4.29.1",
+    "filepond-plugin-image-preview": "^4.6.9",
+    "ipfs-http-client": "^52.0.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
     "netlify-cli": "^6.5.9",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.6",
+    "react-filepond": "^7.1.1",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^5.0.7",
     "saslprep": "^1.0.3",
-    "supports-color": "^7.1.0"
+    "supports-color": "^7.1.0",
+    "webpack-cli": "^4.8.0"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
