Add files from NFT boilerplate

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "author": "John ahn",
   "license": "ISC",
   "dependencies": {
+    "@actyx-contrib/react-pond": "^3.0.0",
+    "@drizzle/react-components": "^1.5.3",
+    "@drizzle/react-plugin": "^1.5.3",
+    "@drizzle/store": "^1.5.3",
     "async": "^3.2.1",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
@@ -25,7 +29,7 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "filepond": "^4.29.1",
-    "filepond-plugin-image-preview": "^4.6.9",
+    "filepond-plugin-image-preview": "^4.6.10",
     "ipfs-http-client": "^52.0.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
